[package]
name = "cristo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tokio = { version = "1.14", features = ["full"] }
diesel = { version = "1.4", features = ["sqlite"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[[bin]]
name = "assets"
path = "src/bin/assets.rs"
